# gbt-synth

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: make_sdfits.py  ngc2841.csv
gbt_synth/: sample_sky.py  synth_sdfits.py
