[metadata]
name = gbt-synth
version = '0.0.1'
author = Pedro Salas
author_email = psalas@nrao.edu
description = Green Bank Telescope synthetic observations
description_file = README.md
description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/astrofle/gbt-synth
project_urls =
    Source Code = https://github.com/astrofle/gbt-synth
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python :: 3

[options]
packages = find:
